--- a/src/web/apps/remotes/chat/package.json
+++ b/src/web/apps/remotes/chat/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@common/api": "workspace:*",
+    "@common/config": "workspace:*",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.15",
